fix: fixed overflow & background error

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -6,6 +6,8 @@ body {
   @apply antialiased overscroll-none;
 }
 
-main {
+/* main {
+  This seems to be causing weird colour errors and errors 
+  with screen overflow
   @apply px-4 h-screen;
-}
+} */
